PS2/cool-parse.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error ';'
    5           | class_list error ';'

    6 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    8 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID '{' expression '}' ';'
    9        | OBJECTID ':' TYPEID ';'
   10        | OBJECTID ':' TYPEID ASSIGN expression ';'

   11 feature_list: feature
   12             | feature_list feature
   13             | error ';'
   14             | feature_list error ';'

   15 optional_feature_list: %empty
   16                      | feature_list

   17 formal: OBJECTID ':' TYPEID

   18 formal_list: formal
   19            | formal_list ',' formal

   20 optional_formal_list: %empty
   21                     | formal_list

   22 expression: OBJECTID ASSIGN expression
   23           | expression '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   24           | expression '.' OBJECTID '(' optional_expression_list_comma ')'
   25           | OBJECTID '(' optional_expression_list_comma ')'
   26           | IF expression THEN expression ELSE expression FI
   27           | WHILE expression LOOP expression POOL
   28           | '{' expression_list_block '}'
   29           | LET lets
   30           | CASE expression OF case_list ESAC
   31           | NEW TYPEID
   32           | ISVOID expression
   33           | expression '+' expression
   34           | expression '-' expression
   35           | expression '*' expression
   36           | expression '/' expression
   37           | '~' expression
   38           | expression '<' expression
   39           | expression LE expression
   40           | expression '=' expression
   41           | NOT expression
   42           | '(' expression ')'
   43           | OBJECTID
   44           | INT_CONST
   45           | STR_CONST
   46           | BOOL_CONST

   47 optional_expression_list_comma: %empty
   48                               | expression
   49                               | optional_expression_list_comma ',' expression

   50 expression_list_block: expression ';'
   51                      | expression_list_block expression ';'
   52                      | error ';'
   53                      | expression_list_block error ';'

   54 case_list: branch
   55          | case_list branch

   56 branch: OBJECTID ':' TYPEID DARROW expression ';'

   57 lets: OBJECTID ':' TYPEID ASSIGN expression ',' lets
   58     | OBJECTID ':' TYPEID ',' lets
   59     | OBJECTID ':' TYPEID ASSIGN expression IN expression
   60     | OBJECTID ':' TYPEID IN expression
   61     | error IN expression
   62     | error ',' lets


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 8 23 24 25 42
    ')' (41) 8 23 24 25 42
    '*' (42) 35
    '+' (43) 33
    ',' (44) 19 49 57 58 62
    '-' (45) 34
    '.' (46) 23 24
    '/' (47) 36
    ':' (58) 8 9 10 17 56 57 58 59 60
    ';' (59) 4 5 6 7 8 9 10 13 14 50 51 52 53 56
    '<' (60) 38
    '=' (61) 40
    '@' (64) 23
    '{' (123) 6 7 8 28
    '}' (125) 6 7 8 28
    '~' (126) 37
    error (256) 4 5 13 14 52 53 61 62
    CLASS (258) 6 7
    ELSE (259) 26
    FI (260) 26
    IF (261) 26
    IN (262) 59 60 61
    INHERITS (263) 7
    LET (264) 29
    LOOP (265) 27
    POOL (266) 27
    THEN (267) 26
    WHILE (268) 27
    CASE (269) 30
    ESAC (270) 30
    OF (271) 30
    DARROW (272) 56
    NEW (273) 31
    ISVOID (274) 32
    STR_CONST <symbol> (275) 45
    INT_CONST <symbol> (276) 44
    BOOL_CONST <boolean> (277) 46
    TYPEID <symbol> (278) 6 7 8 9 10 17 23 31 56 57 58 59 60
    OBJECTID <symbol> (279) 8 9 10 17 22 23 24 25 43 56 57 58 59 60
    ASSIGN (280) 10 22 57 59
    NOT (281) 41
    LE (282) 39
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3 4 5
        on right: 1 3 5
    class <class_> (48)
        on left: 6 7
        on right: 2 3
    feature <feature> (49)
        on left: 8 9 10
        on right: 11 12
    feature_list <features> (50)
        on left: 11 12 13 14
        on right: 12 14 16
    optional_feature_list <features> (51)
        on left: 15 16
        on right: 6 7
    formal <formal> (52)
        on left: 17
        on right: 18 19
    formal_list <formals> (53)
        on left: 18 19
        on right: 19 21
    optional_formal_list <formals> (54)
        on left: 20 21
        on right: 8
    expression <expression> (55)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 8 10 22 23 24 26 27 30 32 33 34 35 36 37 38 39 40 41 42 48 49 50 51 56 57 59 60 61
    optional_expression_list_comma <expressions> (56)
        on left: 47 48 49
        on right: 23 24 25 49
    expression_list_block <expressions> (57)
        on left: 50 51 52 53
        on right: 28 51 53
    case_list <cases> (58)
        on left: 54 55
        on right: 30 55
    branch <case_> (59)
        on left: 56
        on right: 54 55
    lets <expression> (60)
        on left: 57 58 59 60 61 62
        on right: 29 57 58 62


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    4 class_list: error . ';'

    ';'  shift, and go to state 6


State 2

    6 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    7      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class
    5           | class_list . error ';'

    error  shift, and go to state 9
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 10


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    4 class_list: error ';' .

    $default  reduce using rule 4 (class_list)


State 7

    6 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    7      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 11
    '{'       shift, and go to state 12


State 8

    0 $accept: program $end .

    $default  accept


State 9

    5 class_list: class_list error . ';'

    ';'  shift, and go to state 13


State 10

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 11

    7 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 14


State 12

    6 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 15 (optional_feature_list)

    feature                go to state 17
    feature_list           go to state 18
    optional_feature_list  go to state 19


State 13

    5 class_list: class_list error ';' .

    $default  reduce using rule 5 (class_list)


State 14

    7 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 20


State 15

   13 feature_list: error . ';'

    ';'  shift, and go to state 21


State 16

    8 feature: OBJECTID . '(' optional_formal_list ')' ':' TYPEID '{' expression '}' ';'
    9        | OBJECTID . ':' TYPEID ';'
   10        | OBJECTID . ':' TYPEID ASSIGN expression ';'

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


State 17

   11 feature_list: feature .

    $default  reduce using rule 11 (feature_list)


State 18

   12 feature_list: feature_list . feature
   14             | feature_list . error ';'
   16 optional_feature_list: feature_list .

    error     shift, and go to state 24
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 16 (optional_feature_list)

    feature  go to state 25


State 19

    6 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 26


State 20

    7 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16

    '}'  reduce using rule 15 (optional_feature_list)

    feature                go to state 17
    feature_list           go to state 18
    optional_feature_list  go to state 27


State 21

   13 feature_list: error ';' .

    $default  reduce using rule 13 (feature_list)


State 22

    8 feature: OBJECTID '(' . optional_formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 28

    $default  reduce using rule 20 (optional_formal_list)

    formal                go to state 29
    formal_list           go to state 30
    optional_formal_list  go to state 31


State 23

    9 feature: OBJECTID ':' . TYPEID ';'
   10        | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 32


State 24

   14 feature_list: feature_list error . ';'

    ';'  shift, and go to state 33


State 25

   12 feature_list: feature_list feature .

    $default  reduce using rule 12 (feature_list)


State 26

    6 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 34


State 27

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 35


State 28

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 36


State 29

   18 formal_list: formal .

    $default  reduce using rule 18 (formal_list)


State 30

   19 formal_list: formal_list . ',' formal
   21 optional_formal_list: formal_list .

    ','  shift, and go to state 37

    $default  reduce using rule 21 (optional_formal_list)


State 31

    8 feature: OBJECTID '(' optional_formal_list . ')' ':' TYPEID '{' expression '}' ';'

    ')'  shift, and go to state 38


State 32

    9 feature: OBJECTID ':' TYPEID . ';'
   10        | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 39
    ';'     shift, and go to state 40


State 33

   14 feature_list: feature_list error ';' .

    $default  reduce using rule 14 (feature_list)


State 34

    6 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 35

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 41


State 36

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 42


State 37

   19 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 28

    formal  go to state 43


State 38

    8 feature: OBJECTID '(' optional_formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 44


State 39

   10 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 59


State 40

    9 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 9 (feature)


State 41

    7 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 7 (class)


State 42

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


State 43

   19 formal_list: formal_list ',' formal .

    $default  reduce using rule 19 (formal_list)


State 44

    8 feature: OBJECTID '(' optional_formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 60


State 45

   26 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 61


State 46

   29 expression: LET . lets

    error     shift, and go to state 62
    OBJECTID  shift, and go to state 63

    lets  go to state 64


State 47

   27 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 65


State 48

   30 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 66


State 49

   31 expression: NEW . TYPEID

    TYPEID  shift, and go to state 67


State 50

   32 expression: ISVOID . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 68


State 51

   45 expression: STR_CONST .

    $default  reduce using rule 45 (expression)


State 52

   44 expression: INT_CONST .

    $default  reduce using rule 44 (expression)


State 53

   46 expression: BOOL_CONST .

    $default  reduce using rule 46 (expression)


State 54

   22 expression: OBJECTID . ASSIGN expression
   25           | OBJECTID . '(' optional_expression_list_comma ')'
   43           | OBJECTID .

    ASSIGN  shift, and go to state 69
    '('     shift, and go to state 70

    $default  reduce using rule 43 (expression)


State 55

   41 expression: NOT . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 71


State 56

   37 expression: '~' . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 72


State 57

   28 expression: '{' . expression_list_block '}'

    error       shift, and go to state 73
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression             go to state 74
    expression_list_block  go to state 75


State 58

   42 expression: '(' . expression ')'

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 76


State 59

   10 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   23 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   24           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   38           | expression . '<' expression
   39           | expression . LE expression
   40           | expression . '=' expression

    LE   shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79
    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '@'  shift, and go to state 84
    '.'  shift, and go to state 85
    ';'  shift, and go to state 86


State 60

    8 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 87


State 61

   23 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   24           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   26           | IF expression . THEN expression ELSE expression FI
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   38           | expression . '<' expression
   39           | expression . LE expression
   40           | expression . '=' expression

    THEN  shift, and go to state 88
    LE    shift, and go to state 77
    '<'   shift, and go to state 78
    '='   shift, and go to state 79
    '+'   shift, and go to state 80
    '-'   shift, and go to state 81
    '*'   shift, and go to state 82
    '/'   shift, and go to state 83
    '@'   shift, and go to state 84
    '.'   shift, and go to state 85


State 62

   61 lets: error . IN expression
   62     | error . ',' lets

    IN   shift, and go to state 89
    ','  shift, and go to state 90


State 63

   57 lets: OBJECTID . ':' TYPEID ASSIGN expression ',' lets
   58     | OBJECTID . ':' TYPEID ',' lets
   59     | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   60     | OBJECTID . ':' TYPEID IN expression

    ':'  shift, and go to state 91


State 64

   29 expression: LET lets .

    $default  reduce using rule 29 (expression)


State 65

   23 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   24           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   27           | WHILE expression . LOOP expression POOL
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   38           | expression . '<' expression
   39           | expression . LE expression
   40           | expression . '=' expression

    LOOP  shift, and go to state 92
    LE    shift, and go to state 77
    '<'   shift, and go to state 78
    '='   shift, and go to state 79
    '+'   shift, and go to state 80
    '-'   shift, and go to state 81
    '*'   shift, and go to state 82
    '/'   shift, and go to state 83
    '@'   shift, and go to state 84
    '.'   shift, and go to state 85


State 66

   23 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   24           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   30           | CASE expression . OF case_list ESAC
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   38           | expression . '<' expression
   39           | expression . LE expression
   40           | expression . '=' expression

    OF   shift, and go to state 93
    LE   shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79
    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '@'  shift, and go to state 84
    '.'  shift, and go to state 85


State 67

   31 expression: NEW TYPEID .

    $default  reduce using rule 31 (expression)


State 68

   23 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   24           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   32           | ISVOID expression .
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   38           | expression . '<' expression
   39           | expression . LE expression
   40           | expression . '=' expression

    '@'  shift, and go to state 84
    '.'  shift, and go to state 85

    $default  reduce using rule 32 (expression)


State 69

   22 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 94


State 70

   25 expression: OBJECTID '(' . optional_expression_list_comma ')'

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    $default  reduce using rule 47 (optional_expression_list_comma)

    expression                      go to state 95
    optional_expression_list_comma  go to state 96


State 71

   23 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   24           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   38           | expression . '<' expression
   39           | expression . LE expression
   40           | expression . '=' expression
   41           | NOT expression .

    LE   shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79
    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '@'  shift, and go to state 84
    '.'  shift, and go to state 85

    $default  reduce using rule 41 (expression)


State 72

   23 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   24           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   37           | '~' expression .
   38           | expression . '<' expression
   39           | expression . LE expression
   40           | expression . '=' expression

    '@'  shift, and go to state 84
    '.'  shift, and go to state 85

    $default  reduce using rule 37 (expression)


State 73

   52 expression_list_block: error . ';'

    ';'  shift, and go to state 97


State 74

   23 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   24           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   38           | expression . '<' expression
   39           | expression . LE expression
   40           | expression . '=' expression
   50 expression_list_block: expression . ';'

    LE   shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79
    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '@'  shift, and go to state 84
    '.'  shift, and go to state 85
    ';'  shift, and go to state 98


State 75

   28 expression: '{' expression_list_block . '}'
   51 expression_list_block: expression_list_block . expression ';'
   53                      | expression_list_block . error ';'

    error       shift, and go to state 99
    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '}'         shift, and go to state 100
    '('         shift, and go to state 58

    expression  go to state 101


State 76

   23 expression: expression . '@' TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'
   24           | expression . '.' OBJECTID '(' optional_expression_list_comma ')'
   33           | expression . '+' expression
   34           | expression . '-' expression
   35           | expression . '*' expression
   36           | expression . '/' expression
   38           | expression . '<' expression
   39           | expression . LE expression
   40           | expression . '=' expression
   42           | '(' expression . ')'

    LE   shift, and go to state 77
    '<'  shift, and go to state 78
    '='  shift, and go to state 79
    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '@'  shift, and go to state 84
    '.'  shift, and go to state 85
    ')'  shift, and go to state 102


State 77

   39 expression: expression LE . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 103


State 78

   38 expression: expression '<' . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 104


State 79

   40 expression: expression '=' . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 105


State 80

   33 expression: expression '+' . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 106


State 81

   34 expression: expression '-' . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 107


State 82

   35 expression: expression '*' . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 108


State 83

   36 expression: expression '/' . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 109


State 84

   23 expression: expression '@' . TYPEID '.' OBJECTID '(' optional_expression_list_comma ')'

    TYPEID  shift, and go to state 110


State 85

   24 expression: expression '.' . OBJECTID '(' optional_expression_list_comma ')'

    OBJECTID  shift, and go to state 111


State 86

   10 feature: OBJECTID ':' TYPEID ASSIGN expression ';' .

    $default  reduce using rule 10 (feature)


State 87

    8 feature: OBJECTID '(' optional_formal_list ')' ':' TYPEID '{' . expression '}' ';'

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 112


State 88

   26 expression: IF expression THEN . expression ELSE expression FI

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 113


State 89

   61 lets: error IN . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression  go to state 114


State 90

   62 lets: error ',' . lets

    error     shift, and go to state 62
    OBJECTID  shift, and go to state 63

    lets  go to state 115


State 91

   57 lets: OBJECTID ':' . TYPEID ASSIGN expression ',' lets
   58     | OBJECTID ':' . TYPEID ',' lets
   59     | OBJECTID ':' . TYPEID ASSIGN expression IN expression
   60     | OBJECTID ':' . TYPEID IN expression

    TYPEID  shift, and go to state 116


State 92

   27 expression: WHILE expression LOOP . expression POOL
